# pcreporter

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev.sh  pcreporter.service  pyproject.toml  quick_build_sys.sh  quick_clean.sh  quick_run.sh  requirements.txt  setup.py  taskell.md
pcreporter/: __meta__.py  cli.py  state.py
pcreporter/cli/: cmds.py  main.py  sendmsg.py
pcreporter/fn/: lock_screen.py  shutdown.py  tailscale.py
pcreporter/info/: overview.py  programs.py  temp.py  usb.py
pcreporter/monitor/: usb.py
